openshift/deployment-rhpds.yml
kind: Namespace
apiVersion: v1
metadata:
  name: java-logger
  labels:
    name: java-logger
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-logger
  name: java-logger-service
  namespace: java-logger
spec:
  ports:
    - name: 8080-tcp
      port: 8080
  selector:
    deployment: java-logger
---
apiVersion: apps/v1
#kind: StatefulSet
kind: Deployment
metadata:
  labels:
    app: java-logger
  name: java-logger
  namespace: java-logger
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: java-logger
  template:
    metadata:
      labels:
        deployment: java-logger
    spec:
      containers:
        - env:
            - name: JAVA_LOGGER_EXEC_THREADS
              value: "1"
            - name: SPRING_PROFILES_ACTIVE
              value: "openshift"
            - name: K8S_CLUSTER_ID
              value: "OCP_ODF_CLUSTER_RHPDS"
            - name: JAVA_LOGGER_CONTAINER_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
          image: quay.io/ajarrett/java-logger-8:latest
          imagePullPolicy: Always
          name: java-logger
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /home/jboss/logs
              name: java-logger-pv
        - name: filebeat
          image: registry.connect.redhat.com/elastic/filebeat:7.17.1
          volumeMounts:
          - name: java-logger-pv
            mountPath: /home/jboss/logs
          - name: filebeat-config
            mountPath: /usr/share/filebeat/filebeat.yml
            subPath: filebeat.yml
#      securityContext:
#        allowPrivilegeEscalation: true
      volumes:
        - name: java-logger-pv
          persistentVolumeClaim:
            claimName: java-logger-pvc
        - name: filebeat-config
          configMap:
            name: filebeat-configmap
            items:
              - key: filebeat.yml
                path: filebeat.yml
#  volumeClaimTemplates:
#    - metadata:
#        name: java-logger-vol
#      spec:
#        accessModes:
#          - ReadWriteOnce
#        resources:
#          requests:
#            storage: 3Gi
#        storageClassName: ocs-storagecluster-cephfs
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: java-logger
  name: java-logger
  namespace: java-logger
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: java-logger-service
    weight: 100
  wildcardPolicy: None
