openshift/elastic-search.yml
kind: Namespace
apiVersion: v1
metadata:
  name: elastic-monitoring
  labels:
    name: elastic-monitoring
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kibana-kb-http
  namespace: elastic-monitoring
  labels:
    common.k8s.elastic.co/type: kibana
    kibana.k8s.elastic.co/name: kibana
spec:
#  host: kibana-kb-http-elastic-monitoring.apps.cedar.demolab.local
  to:
    kind: Service
    name: kibana-kb-http
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
